# cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/: Makefile  README.md  manifest.json  pyproject.toml
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/.github/: pull_request_template.md
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/.github/PULL_REQUEST_TEMPLATE/: release.md
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/.github/workflows/: linters.yml  release.yml  tests.yml
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/scripts/: bump.sh
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/tests/: test_example.py
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/: __init__.py  example.py
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}/cli/: core.py  generators.py  utils.py
{{ cookiecutter.project_slug }}/: .gitignore  Makefile  manifest.json  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: linters.yml  tests.yml
{{ cookiecutter.project_slug }}/scripts/: bump.sh
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: version.py
