[tool.poetry]
name = "{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
license = "MIT"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
maintainers = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [
    { include = "{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
    "mypy.ini",
    ".coveragerc",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pylint = "^2.6.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
{% if cookiecutter.include_type_checking == "yes" %}
mypy = "^0.790"
{% endif +%}

{%+ if cookiecutter.include_cli == "yes" -%}

[tool.poetry.plugins."console_scripts"]
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }} = "{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}.cli.core:dispatcher"

{%- endif +%}
