[tool.poetry]
name = "{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
license = "MIT"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
maintainers = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [
    { include = "{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}" },
]
exclude = [
    ".github",
    ".flake8",
    ".pylintrc",
{%- if cookiecutter.include_type_checking == "yes" %}
    "mypy.ini",
{%- endif %}
    ".coveragerc",
    "Makefile",
    "scripts",
    "tests"
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
{% if cookiecutter.include_type_checking == "yes" -%}
mypy = "^0.910"
{%- endif %}

{% if cookiecutter.include_cli == "yes" -%}

[tool.poetry.plugins."console_scripts"]
{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }} = "{{ cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_') }}.cli.core:dispatcher"

{%- endif %}
